--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    Hello, world!
-    
+    <div class="wrapper">
+        Hello, world!
+    </div>
+
 </body>
 </html>
