--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <div class="wrapper">
-        Hello, world!
+        04-03-2024 <br>
+        23:22 <br>
+        сейчас ночь <br>
+
+        
     </div>
 
 </body>
