--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-    <div class="wrapper">
-        04-03-2024 <br>
-        23:22 <br>
-        сейчас ночь <br>
-
-        
-    </div>
-
+<body onclick="toggleMode()">
+        <div class="wrapper">
+            <div id="date">
+            </div>
+            <div id="time">
+            </div>
+            <div id="daytime">
+            </div>
+        </div>
+        <script src="js/main.js"></script>
 </body>
 </html>
