feat: correct html&css

--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
 </head>
 <body onclick="toggleMode()">
         <div class="wrapper">
-            <div id="date">
-            </div>
-            <div id="time">
-            </div>
+            <div id="time"></div>
+            <div id="daytime"></div>
         </div>
         <script src="js/main.js"></script>
 </body>
