feat: add dayOfWeek

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="wrapper">
             <div id="time"></div>
             <div id="daytime"></div>
+            <div id="dayOfWeek"></div>
         </div>
         <script src="js/main.js"></script>
 </body>
