--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
         <div class="wrapper">
-            <div id="daytime"></div>
+            <div id="daytime">ЧАСЫ</div>
             <div id="time"></div>
             <div id="dayOfWeek"></div>
         </div>
