--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 <body>
         <div class="wrapper">
-            <div id="daytime">ЧАСЫ</div>
+            <div id="dayOfWeek">ЧАСЫ</div>
             <div id="time"></div>
-            <div id="dayOfWeek"></div>
+            <div id="daytime"></div>
+            
         </div>
         <script src="js/main.js"></script>
 </body>
