--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
         <div class="wrapper">
-            <div id="time"></div>
+            <div id="time">
+    <span id="hours"></span><span class="colon">:</span><span id="minutes"></span><span class="colon">:</span><span id="seconds"></span>
+</div>
+
             <div id="daytime"></div>
             <div id="dayOfWeek"></div>
             
