--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
         <div class="wrapper">
             <div id="time">
-    <span id="hours"></span><span class="colon">:</span><span id="minutes"></span><span class="colon">:</span><span id="seconds"></span>
+    <span id="hours"></span><span class="colon">:</span><span id="minutes"></span>
 </div>
 
             <div id="daytime"></div>
