--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <span id="hours"></span><span class="colon">:</span><span id="minutes"></span>
             </div>
             <div id="dayOfWeek"></div>
-            
+            <div id="daytime"></div>
         </div>
         <script src="js/main.js"></script>
 </body>
