--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 </head>
 <body>
         <div class="wrapper">
-          <div class="show" id="info">
             <div id="time">
                 <span id="hours"></span><span class="colon">:</span><span id="minutes"></span>
             </div>
             <div id="dayOfWeek"></div>
             <div id="daytime"></div>
-            </div>
-          <div class="hide" id="picture"></div>
+            <div id="picture"></div>
         </div>
         <script src="js/main.js"></script>
 </body>
